# ml2wasm

./: .gitignore  README.md  arith.ml  arith.wast  debug_rc_dec_array.wast  gc_blog_jp.md  hml.cabal  man.csv  man.ods  mandelbrot.wast  ml2wasm.cabal  test.sh  testAll.sh  tuple.wast  with-gc-result.txt  without-gc-result.txt
app/: Main.hs
ml-examples/: add.ml  adder.ml  arith.ml  array.ml  closure.ml  div.ml  fib.ml  float.ml  fun.ml  fun2.ml  funAsVal.ml  if.ml  let.ml  mandelbrot.ml  nestlet.ml  partialApply.ml  print.ml  seq.ml  tuple.ml
src/: Alpha.hs  Closure.hs  KNormal.hs  Link.hs  NestedLet.hs  Parse.hs  Type.hs  UnusedVar.hs  WasmGen.hs
wasm-examples/: 1+3.wasm  call_indirect.wast  heap.html  heap.wasm  heap.wast  heap2.wast  if.wast  local.wasm  local.wast  malloc.wast  print.wast  run-wast.sh  simple.wasm  simple.wast
wasm-memory/: README.md  build.sh  caller.js  malloc.html  malloc.wast  memory.html  memory.wast  run-wast.sh
wasm-test/: 1+3.wast  run-1+3.sh  simple.html  square.html
