name:                ml2wasm
version:             0.1.0.0
synopsis:            A compiler from ML like language to Webassembly
description:         A compiler from ML like language to Webassembly
homepage:            https://github.com/akawashiro/ml2wasm#readme
author:              a_kawashiro
category:            Programming Language Processing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parse, Type, Alpha, Closure, UnusedVar, WasmGen
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , containers
                     , transformers
                     , either
  default-language:    Haskell2010

executable ml2wasm
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ml2wasm
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/akawashiro/ml2wasm
